fix: adjust confirmation message styles for improved layout and visibility

--- a/style.css
+++ b/style.css
@@ -169,15 +169,18 @@ body {
   background-color: white;
   border-radius: 20px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  text-align: left;
 }
-
+.confirmation-message img {
+  margin-bottom: 1rem;
+}
 .confirmation-message button {
   background-color: #1f2235;
   color: #ffffff;
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 5px;
+  margin-top: 1rem;
   font-weight: 700;
   cursor: pointer;
   transition: background 0.2s;
@@ -187,6 +190,11 @@ body {
   background-color: #111430;
 }
 @media (max-width: 375px) {
+  body {
+    padding: 0rem;
+    margin: 0rem;
+    min-height: 100vh;
+  }
   .wrapper {
     flex-direction: column;
     align-items: center;
@@ -195,6 +203,8 @@ body {
     box-shadow: none;
     border-radius: 0;
     width: 100%;
+    height: 100%;
+    min-height: 100vh;
     max-width: 100%;
   }
 
@@ -246,5 +256,39 @@ body {
 
   .form input[type="email"] {
     margin-bottom: 1rem;
+  }
+  .confirmation-message {
+    min-height: 100vh;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    margin: 0;
+    border-radius: 0;
+    padding: 2rem;
+    position: relative;
+  }
+  .confirmation-message img {
+    margin-top: 5rem;
+  }
+  .confirmation-message .title {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .confirmation-message p {
+    font-size: 0.9rem;
+  }
+  .dismiss-button {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    display: block;
+    margin: 0;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    padding: 0.2rem;
+    text-align: center;
+    font-weight: 700;
   }
 }
